# anton

./: .gitignore  CHANGELOG.md  DASHBOARD_IMPLEMENTATION_STATUS.md  JSON_RETRY_IMPLEMENTATION.md  README.md  file  pyproject.toml
docs/: CONTINUATION.md  DASHBOARD.md  DASHBOARD_NEXT_STEPS.md  DEVELOPMENT.md  KNOWLEDGE_BASE.md  PROXY_IMPLEMENTATION_PLAN.md  PROXY_USAGE.md  REALTIME_DASHBOARD_DESIGN.md  TOOL_CALLING.md
src/modular_agents/: __init__.py  autonomy.py  checkpoint.py  cli.py  file_writer.py  knowledge_manager.py  progress.py  reporting.py  retry.py  runtime.py  trace.py
src/modular_agents/agents/: __init__.py  base.py  module_agent.py  orchestrator.py  prompts.py
src/modular_agents/analyzers/: __init__.py  base.py  generic.py  sbt.py
src/modular_agents/core/: __init__.py  models.py
src/modular_agents/knowledge/: __init__.py  base.py  embeddings.py  indexer.py  parser.py  simple_parser.py  store.py  vector_index.py
src/modular_agents/llm/: __init__.py  base.py  claude.py  ollama.py  openai.py
src/modular_agents/proxy/: __init__.py  dashboard.html  dashboard_server.py  database.py  schema.sql  server.py
src/modular_agents/tools/: __init__.py  base.py  code_tools.py  execution_tools.py  git_tools.py
tests/: test_core.py
