[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anton"
version = "0.1.0"
description = "Multi-agent framework for modular codebases with pluggable LLM backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["agents", "llm", "multi-agent", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "aiofiles>=23.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.30.0"]
openai = ["openai>=1.0"]
ollama = ["ollama>=0.2.0"]
knowledge = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "hnswlib>=0.8.0",
]
proxy = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.30.0",
    "openai>=1.0",
]
all = [
    "anthropic>=0.30.0",
    "openai>=1.0",
    "ollama>=0.2.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "hnswlib>=0.8.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
anton = "modular_agents.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/modular-agents"
Documentation = "https://github.com/yourname/modular-agents#readme"
Repository = "https://github.com/yourname/modular-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/modular_agents"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
